--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
         <div class="container">
             <nav>
                 <img src="images/A.png" alt="logo" class="logo">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                <ul id="sidemenu">
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <img src="images/close-line.svg" alt="" class="n" onclick="closemenu()">
                 </ul>
+                <img src="images/menu-4-fill.svg" class="n" onclick="openmenu()">
             </nav>
             <div class="headert">
                 <p>Front-End Devpoloper UI/UX</p>
@@ -119,6 +121,7 @@
                         <a href="https://www.linkedin.com/in/abhiram-vakil"><img src="images/linkedin-box-fill.svg" alt=""></a>
                         <a href="https://github.com/Abhiram-Vakil"><img src="images/github-fill.svg" alt=""></a>
                     </div>
+                    <a href="" class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form>
@@ -148,8 +151,17 @@
             event.currentTarget.classList.add("active-link");
             document.getElementById(tabname).classList.add("active-tab");
         }
+    </script>
+    <script>
+        var sidemenu=document.getElementById("sidemenu");
+        function openmenu(){
+            sidemenu.style.right="0";
+            
+        }
+        function closemenu(){
+            sidemenu.style.right="-200px";
 
-
+        }
     </script>
 </body>
 </html>
